		- Thanks to @MadSpindel for fixing.
	Fixed type in Brazilian Portuguese translation.
		- Thanks to @vinny
	Fixed bug with IE causing IndexSizeError when getting the selected range.
		- Thanks to @jetand for fixing.
	Added startInSourceMode option to start the editor in source mode.
		- Thanks to @brunoais
	Fixed issue with XHTML removing some nodes containing only a <br />.
		- Thanks to @kt3k

Version 1.4.7:
	Fixed bug with XHTML plugin not wrapping inline nodes in paragraphs.
		- Thanks to @Heart1010 for reporting
	Fixed bug with buttons appearing disabled in source mode.
		- Thanks to @brunoais for reporting.
	Fixed bug with undo plugin when the valueChanged event is triggered before
		the ready event.
	Fixed bug with undo plugin and IE < 8 compatibility.
	Fixed bug in IE where styles are not applied to text inside of a table cell.
		- Thanks to @AlbertPraveen for reporting.
	Fixed bug with IE placing cursor at the start of the editor when a dropdown
		contains a textarea or input.
	Fixed bug with FF showing the cursor in the wrong position when it hasn't
		had focus before.
		- Thanks to @cyphix333 for reporting.
	Fixed bug with IE placing cursor inside table tag when inserted.
		- Thanks to @jetand for reporting.
	Fixed bug with IE placing the cursor before emoticons after inserting them.

Version 1.4.6:
	Fixed resize issue with Android browsers.
		- Thanks to @scripple for fixing.
	Fixed bug with table being turned into paragraphs.
		- Thanks to @jetand for fixing.
	Refactored the code so that it's in modules.
		The code is now much more readable and far easier to maintain and test.
		This change is 100% backwards compatible with the minified version and
		running the build will also create a backwards compatible non-minified
		version.
		The non-minified non-built code will require an AMD module loader to
		load it.
	Refactored all the unit tests for the new modules.
	Added manual tests.